confeet/ingress/confeet-ingress.yml
# ingress direct access use this for subdomain also
# port number range for emstum services start from 8201 - 8300
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confeet-ingress
  namespace: cf
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/enable-websocket: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:      
      -  www.confeet.com
      secretName: confeet-tls
  rules:           
  - host: www.confeet.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: conf-web-service
            port:
              number: 7800

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: conf-manager-service
            port:
              number: 7801

      # - path: /stt
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: stt-service
      #       port:
      #         number: 7802
