confeet/ingress/confeet-sfu-ingress.yml
# ingress direct access use this for subdomain also
# port number range for emstum services start from 8201 - 8300
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confeet-sfu-ingress
  namespace: cf
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"   
    nginx.ingress.kubernetes.io/websocket-services: "livekit-service.cf.svc.cluster.local"
spec:
  ingressClassName: public
  tls:
    - hosts:      
      -  www.confeet.com
      secretName: confeet-tls
  rules:           
  - host: www.confeet.com
    http:
      paths:      
      - path: /conference(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: livekit-service
            port:
              number: 7880
